--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,73 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="4"
-    tools:context="com.example.android.moviefinder.DetailActivity">
-
-    <TextView
-        android:id="@+id/tv_movie_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@color/colorBlueSoft"
-        android:gravity="center_vertical"
-        android:paddingLeft="20dp"
-        android:text="@string/movie_title"
-        android:textColor="@android:color/white"
-        android:textSize="40sp" />
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        android:weightSum="3">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="4">
 
-        <ImageView
-            android:id="@+id/iv_movie_thumbnail"
-            android:layout_width="wrap_content"
+
+        <TextView
+            android:id="@+id/tv_movie_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp" />
+            android:background="@color/colorBlueSoft"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp"
+            android:text="@string/movie_title"
+            android:textColor="@android:color/white"
+            android:textSize="40sp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:paddingLeft="16dp">
+            android:orientation="horizontal"
+            android:padding="16dp"
+            android:weightSum="3">
 
-            <TextView
-                android:id="@+id/tv_movie_release"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/iv_movie_thumbnail"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="34sp" />
+                android:layout_weight="1"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp" />
 
-            <TextView
-                android:id="@+id/tv_movie_rate"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:layout_weight="2"
+                android:orientation="vertical"
+                android:paddingLeft="16dp">
+
+                <TextView
+                    android:id="@+id/tv_movie_release"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="34sp" />
+
+                <TextView
+                    android:id="@+id/tv_movie_rate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_synopsis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="17dp"
+            android:text="TextView"
+            android:textColor="@android:color/darker_gray" />
+
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_synopsis"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="17dp"
-        android:text="TextView"
-        android:textColor="@android:color/darker_gray" />
-
-</LinearLayout>
+</ScrollView>
