--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -61,6 +61,15 @@
                     android:textColor="@android:color/black"
                     android:textSize="18sp" />
 
+                <ToggleButton
+                    android:textOn="@string/mark_favorite"
+                    android:textOff="@string/mark_favorite"
+                    android:textColor="@android:color/darker_gray"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tb_mark_favorite"
+                    android:checked="false" />
+
             </LinearLayout>
 
 
