--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,9 +12,15 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_refresh"
+        android:id="@+id/filter_favorites"
+        android:icon="@android:drawable/star_off"
         android:orderInCategory="1"
+        android:title="@string/filter_favorites"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_refresh"
         android:icon="@drawable/ic_menu_refresh"
+        android:orderInCategory="2"
         android:title="@string/action_refresh"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 </menu>
