--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -62,13 +61,13 @@
                     android:textSize="18sp" />
 
                 <ToggleButton
-                    android:textOn="@string/mark_favorite"
-                    android:textOff="@string/mark_favorite"
-                    android:textColor="@android:color/darker_gray"
+                    android:id="@+id/tb_mark_favorite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tb_mark_favorite"
-                    android:checked="false" />
+                    android:checked="false"
+                    android:textColor="@android:color/darker_gray"
+                    android:textOff="@string/mark_favorite"
+                    android:textOn="@string/mark_favorite" />
 
             </LinearLayout>
 
@@ -80,9 +79,34 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="17dp"
-            android:text="TextView"
             android:textColor="@android:color/darker_gray" />
 
+        <TextView
+            android:id="@+id/tv_trailers_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_trailers_title"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_trailers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_reviews_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/tv_reviews_title"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_reviews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </ScrollView>
