--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="30dp"
-    android:weightSum="11">
+    android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/ib_play_trailer"
-        android:layout_width="wrap_content"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        android:paddingLeft="30dp"
+        android:weightSum="11">
 
-    <TextView
-        android:id="@+id/tv_trailer_numb"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_weight="9"
-        android:gravity="center_vertical"
-        android:paddingLeft="20dp" />
+        <ImageButton
+            android:id="@+id/ib_play_trailer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:srcCompat="@android:drawable/ic_media_play" />
+
+        <TextView
+            android:id="@+id/tv_trailer_numb"
+            android:layout_width="wrap_content"
+            android:layout_height="46dp"
+            android:layout_weight="9"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:padding="16dp" />
+
+
 </LinearLayout>
