--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -11,8 +11,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/view_line_divisor"
         android:background="@android:color/darker_gray"
-        android:padding="16dp" />
+        android:padding="@dimen/default_padding" />
 
 </LinearLayout>
