--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -21,17 +21,17 @@
         <TextView
             android:id="@+id/tv_trailer_numb"
             android:layout_width="wrap_content"
-            android:layout_height="46dp"
-            android:layout_weight="9"
+            android:layout_height="match_parent"
+            android:layout_weight="8.14"
             android:gravity="center_vertical"
-            android:paddingLeft="20dp" />
+            android:paddingLeft="@dimen/default_padding" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/view_line_divisor"
         android:background="@android:color/darker_gray"
-        android:padding="16dp" />
+        android:padding="@dimen/default_padding" />
 
 
 </LinearLayout>
