--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="movie_title">40sp</dimen>
+    <dimen name="default_padding">16dp</dimen>
+    <dimen name="view_line_divisor">1dp</dimen>
+    <dimen name="progress_bar_size">42dp</dimen>
+    <dimen name="error_message_text_size">20sp</dimen>
+    <dimen name="review_section_text_size">18sp</dimen>
+    <dimen name="trailer_section_text_size">18sp</dimen>
+    <dimen name="moview_realeasedate_text_size">34sp</dimen>
+    <dimen name="moview_user_rate_text_size">18sp</dimen>
 </resources>
