--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/default_padding">
 
     <TextView
         android:id="@+id/tv_review_content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/default_padding"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/view_line_divisor"
-        android:background="@android:color/darker_gray"
-        android:padding="@dimen/default_padding" />
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
